...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessTheFlagActivity">


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/returnImg_cap"
        android:layout_width="27dp"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
